--- a/adminapp/templates/adminapp/freezing_entry_local_list.html
+++ b/adminapp/templates/adminapp/freezing_entry_local_list.html
@@ -36,6 +36,8 @@
                     {% csrf_token %}
                     <button type="submit" onclick="return confirm('Are you sure you want to delete this entry?')">Delete</button>
                 </form>
+                <a href="{% url 'adminapp:freezing_entry_local_detail' entry.id %}">Details</a>
+                <a href="{% url 'adminapp:freezing_entry_local_update' entry.id %}">Update</a>
             </td>
         </tr>
         {% empty %}
