--- a/adminapp/templates/adminapp/freezing/freezing_entry_spot_list.html
+++ b/adminapp/templates/adminapp/freezing/freezing_entry_spot_list.html
@@ -36,7 +36,10 @@
                     {% csrf_token %}
                     <button type="submit" onclick="return confirm('Are you sure you want to delete this entry?')">Delete</button>
                 </form>
-            </td>
+                    <td>
+                        <a href="{% url 'adminapp:freezing_entry_spot_detail' entry.pk %}">Detail</a> |
+                        <a href="{% url 'adminapp:freezing_entry_spot_update' entry.pk %}">Update</a>        </td>
+                    </td>
         </tr>
         {% empty %}
         <tr><td colspan="8">No entries found.</td></tr>
