--- a/adminapp/templates/adminapp/purchases/peeling_shed_supply_list.html
+++ b/adminapp/templates/adminapp/purchases/peeling_shed_supply_list.html
@@ -29,7 +29,9 @@
                 <td>{{ supply.total_quantity }}</td>
                 <td>{{ supply.total_amount }}</td>
                 <td>
+                    <a href="{% url 'adminapp:peeling_shed_supply_detail' supply.pk %}">Detail</a>
                     <a href="{% url 'adminapp:peeling_shed_supply_delete' supply.pk %}">Delete</a>
+                    <a href="{% url 'adminapp:peeling_shed_supply_update' supply.pk %}">Update</a>
                 </td>
             </tr>
             {% empty %}
