--- a/adminapp/templates/adminapp/dashboard.html
+++ b/adminapp/templates/adminapp/dashboard.html
@@ -600,7 +600,7 @@
                 </div>
             </div>
             
-            <!-- local purchase report -->
+            <!-- Peeling Shed report -->
             <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
                 <div class="card module-card">
                     <div class="card-body">
@@ -608,10 +608,29 @@
                             <div class="card-icon" style="background: linear-gradient(135deg, #e74c3c, #ec7063);">
                                 <i class="fas fa-clipboard-check"></i>
                             </div>
-                            Local purchase report
+                            Peeling Shed report
                         </h5>
-                        <p class="text-muted mb-3 small">Local purchase report</p>
-                        <a href="{% url 'adminapp:local_purchase_report' %}" class="btn-modern btn-add">
+                        <p class="text-muted mb-3 small">Peeling Shed report</p>
+                        <a href="{% url 'adminapp:peeling_shed_supply_report' %}" class="btn-modern btn-add">
+                            <i class="fas fa-plus"></i>
+                            Get Report
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Freezing report -->
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
+                <div class="card module-card">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <div class="card-icon" style="background: linear-gradient(135deg, #e74c3c, #ec7063);">
+                                <i class="fas fa-clipboard-check"></i>
+                            </div>
+                            Freezing report
+                        </h5>
+                        <p class="text-muted mb-3 small">Freezing report</p>
+                        <a href="{% url 'adminapp:freezing_report' %}" class="btn-modern btn-add">
                             <i class="fas fa-plus"></i>
                             Get Report
                         </a>
