--- a/adminapp/templates/adminapp/purchases/local_purchase_form.html
+++ b/adminapp/templates/adminapp/purchases/local_purchase_form.html
@@ -166,6 +166,9 @@
                 <thead>
                     <tr>
                         <th>Item</th>
+                        <th>Category</th>
+                        <th>Species</th>
+                        <th>Type</th>
                         <th>Grade</th>
                         <th>Quantity</th>
                         <th>Rate</th>
